--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+<!--    this is going to be replaced with the script that has been written in index.js-->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
